Update README with another macro reference workaround
Imports can be unquoted within macros. We do, however, have to expand
the reader macros for interop ourselves:

    (AClass. foo)       -> (new AClass foo)
    (AClass/method foo) -> (. AClass (method foo))

This change also updates the section on PermGen pressure. While the
initial loading of all namespaces does contribute, the real culprit is
that JVMs do not garbage collect discarded classes.